Wed Jul  2 01:58:01 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/CUTS.mpc:
        
          Removed the JNI-based project from the file.
          
        * cuts/cuts_java_Logger.cpp:

          Removed this file.

Wed Jul  2 01:54:13 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/java/Logger.java:

          Removed the native method calls since the Logger talks directly
          to a logging client, instead of using ACE.

        * cuts/java/jbi/deployment/JbiNodeApplication.java:
        * cuts/java/jbi/deployment/NodeApplicationManagerImpl.java:

          Initial attempt to fix the faultly spawning of the
          JbiNodeApplication.

        * etc/config/cuts_odbclib.mpb:
        * etc/config/cuts_testing_skel.mpb:
        * etc/config/cuts_testing_stub.mpb:

          New base projects.

        * etc/config/cuts_odbclib.mpc:

          Removed this file.

Wed Jul  2 08:29:30 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/java/jbi/client/JbiSink.java:
        * cuts/java/jbi/client/JbiSource.java:

          Temporarily disabled the destruction of the sequences during the
          close () method since this caused the CAPI client code to throw
          a NULL pointer exception.

Mon Jun 30 17:51:36 UTC 2008  Hamilton Turner  <hamilton.a.turner@vanderbilt.edu>

        * utils/BMW/website/metrics_temp/cuts_try_4/App_Code/ChartActions.cs:
        * utils/BMW/website/metrics_temp/cuts_try_4/App_Code/DataTableActions.cs:
        * utils/BMW/website/metrics_temp/cuts_try_4/App_Code/LogVariables.cs:
        * utils/BMW/website/metrics_temp/cuts_try_4/App_Code/UnitTestActions.cs:

          . Added in basic charting support

        * utils/BMW/website/metrics_temp/cuts_try_4/Default.aspx:
        * utils/BMW/website/metrics_temp/cuts_try_4/Default.aspx.cs:
        * utils/BMW/website/metrics_temp/cuts_try_4/LF_Create.aspx.cs:
        * utils/BMW/website/metrics_temp/cuts_try_4/charts:
